# arm_gazebo

./: LICENSE  README.md  arm_gazebo.code-workspace
arm_moveit_config/: .setup_assistant  package.xml
arm_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  robot_description.srdf  ros_controllers.yaml
arm_moveit_config/launch/: arm_moveit_controller_manager.launch.xml  demo.launch  demo_gazebo.launch  gazebo.launch  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  planning_context.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
innfos_control/: CMakeLists.txt  note.md  package.xml
innfos_control/arm_control/: CMakeLists.txt
innfos_control/arm_control/config/: gluon_realsense_eye_on_base.yaml  innfos.yaml
innfos_control/arm_control/include/: WzSerialPort.h
innfos_control/arm_control/launch/: bringup_with_camera.launch  interface_test.launch
innfos_control/arm_control/scripts/: camera_base_transform.py  camera_calibration_transform.py  camera_transform.py  tf_05_06_15_20_16.csv  tf_record.py
innfos_control/arm_control/src/: WzSerialPort.cpp  controller.cpp  gripper_control.cpp  open_door_demo.cpp  open_door_demo_v2.cpp  pick_item_demo.cpp  plug_demo.cpp  robot_state_test.cpp
innfos_control/gazebo_control/: CMakeLists.txt
innfos_control/gazebo_control/config/: arm_control_moveit.yaml  map.pgm  map.yaml  map_v2.pgm  map_v2.yaml  map_without_door.yaml
innfos_control/gazebo_control/data/: angle_11_09_14_41_03.csv  angle_11_09_14_49_31.csv  angle_11_09_14_55_25.csv  angle_11_09_15_03_57.csv  angle_11_09_15_16_29.csv  (+49 more)
laser_line_extraction/launch/: line_extraction.launch
laser_line_extraction/scripts/: cal_door_angle.py
laser_line_extraction/src/: line_extraction_ros.cpp
robotiq_gripper/robotiq_description/: CMakeLists.txt  package.xml
(+43 files in other folders)
